--- a/Practica2.Rmd
+++ b/Practica2.Rmd
@@ -102,8 +102,10 @@ Descripción campo Bytes: Número de bytes transferidos
 
 3. Aprovechando que los datos a analizar son los mismos de la primera práctica, para esta entrega es imprescindible que los datos estén en formato de “datos elegantes”.
 
+```{r}
+epa_http$Timestamp <- as.POSIXct(epa_http$Timestamp, format=[%d:%H:%M:%S], tz="UTC")
+```
 
- 
 ### Exploración de Datos
 
 4. Identificar el número único de usuarios que han interactuado directamente con el servidor de forma segregada según si los usuarios han tenido algún tipo de error en las distintas peticiones ofrecidas por el servidor.
