--- a/Practica2.Rmd
+++ b/Practica2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Practica2"
+title: "Práctica 2"
 author: "Cinthya Figueroa, David Vidal y Valeri Suarez"
 date: "2024-01-16"
 output: html_document
@@ -134,12 +134,22 @@ epa_http$tipo_error <- case_when(
   TRUE ~ "Sin error"
 )
 
-# Agrupamos los datos por IP y tipo de error y mostramos resumen
+# Creamos una tabla con la agrupación de la respuesta según si es error del cliente, servidor o si no hay error
+tabla_frecuencias <- table(epa_http$tipo_error)
+
+# Creamos una tabla con la frecuencia de los distintos tipos de error por código
+tabla_tipos_errores <- table(epa_http$`Código de respuesta`)
+
+# Mostramos los datos de las dos tablas anteriores
+print(tabla_frecuencias)
+print(tabla_tipos_errores)
+
+# Ahora agrupamos los datos por IP y tipo de error y mostramos resumen
 epa_http %>% 
   group_by(IPs, tipo_error) %>% 
   summarize(count = n_distinct(IPs))
 
-# Creamos un gráfico de barras apiladas por IP y error
+# Creamos un gráfico de barras de los datos por IP y error
 ggplot(epa_http, aes(x = IPs, fill = tipo_error)) +
      geom_bar(stat = "count", position = "stack") +
      labs(title = "Número de usuarios únicos por IP y tipo de error", x = "IP", y = "Usuarios", fill = "Tipo de error")
