--- a/Practica2.Rmd
+++ b/Practica2.Rmd
@@ -18,6 +18,7 @@ install.packages("XML")
 install.packages("httr2")
 install.packages("htmlTable")
 install.packages("stringr")
+install.packages("patchwork")
 ```
 
 ```{r}
@@ -30,6 +31,7 @@ library(XML)
 library(httr)
 library(httr2)
 library(htmlTable)
+library(patchwork)
 ```
 
 ## Datos Elegantes + Análisis de Datos con Web Scrapping
@@ -110,19 +112,79 @@ Elaborad, usando las librerías de gráficos base y qplot (ggplot2), una infogra
 
 1. Un histograma con la frecuencia de aparición de los enlaces, pero separado por URLs absolutas (con “http…”) y URLs relativas.
 
+  Creamos una nueva columna llamada 'Tipo' para distinguir entre URLs absolutas y relativas
 ```{r}
+tabla$Tipo <- ifelse(grepl("^http", tabla$URL), "URL Absoluta", "URL Relativa")
 ``` 
- 
-2. Un gráfico de barras indicando la suma de enlaces que apuntan a otros dominios o servicios (distinto a https://www.mediawiki.org en el caso de ejemplo) vs. la suma de los otros enlaces.
+
+Creamos el histograma
 
 ```{r}
+ggplot(data = tabla, aes(x = Tipo, fill = Tipo)) + geom_bar() + labs(title = "Histograma de Enlaces por Tipo", x = "Tipo de Enlace", y = "Frecuencia") + theme_minimal()
 ``` 
- 
+
+2. Un gráfico de barras indicando la suma de enlaces que apuntan a otros dominios o servicios (distinto a https://www.mediawiki.org en el caso de ejemplo) vs. la suma de los otros enlaces.
+
+Creamos una nueva columna llamada 'TipoEnlace' para guardar la diferencia entre enlaces a mediawiki y otros:
+
+```{r}
+ tabla$TipoEnlace <- ifelse(
+     grepl("https://www.mediawiki.org", tabla$URL),
+     "Enlace a mediawiki",
+     "Otros Enlaces"
+ )
+``` 
+
+Creamos el gráfico de barras:
+
+```{r}
+ ggplot(data = tabla, aes(x = TipoEnlace, fill = TipoEnlace)) +
+     geom_bar() +
+     labs(title = "Enlaces a mediawiki vs. Otros Enlaces", x = "Tipo de Enlace", y = "Suma de Enlaces") + theme_minimal()
+``` 
 3. Un gráfico de tarta (pie chart) indicando los porcentajes de Status de nuestro análisis.
 
 ```{r}
+ ggplot(data = tabla, aes(x = "", y = estado, fill = estado)) +
+    geom_bar(stat = "identity", width = 1, color = "white") +
+     coord_polar("y") +
+     labs(title = "Distribución de Estado de Análisis", fill = "estado") +
+     theme_minimal() +
+     theme(legend.position = "right")
 ``` 
 
+Se deben guardar los 3 graficos en variables:
+
+```{r}
+Gra1 <- ggplot(data = tabla, aes(x = Tipo, fill = Tipo)) + geom_bar() + labs(title = "Histograma de Enlaces por Tipo", x = "Tipo de Enlace", y = "Frecuencia") + theme_minimal()
+```
+
+```{r}
+Gra2 <- ggplot(data = tabla, aes(x = TipoEnlace, fill = TipoEnlace)) +
+     geom_bar() +
+     labs(title = "Enlaces a mediawiki vs. Otros Enlaces", x = "Tipo de Enlace", y = "Suma de Enlaces") + theme_minimal()
+```
+
+```{r}
+Gra3 <-ggplot(data = tabla, aes(x = "", y = estado, fill = estado)) +
+    geom_bar(stat = "identity", width = 1, color = "white") +
+     coord_polar("y") +
+     labs(title = "Distribución de Estado de Análisis", fill = "estado") +
+     theme_minimal() +
+     theme(legend.position = "right")
+```
+
+Se pueden visualizar los tres graficos juntos:
+```{r}
+Gra1 + Gra2 + Gra3
+```
+
+Otra forma puede ser, Guardar 2 graficas en una variable y luego guardar esta más el ultimo grafico en un variable total con la división de vista que queremos: 
+```{r}
+Tdgra <- Gra1 | Gra2
+tdgra1 <- Tdgra / Gra3
+tdgra1
+```
  
 ## Análisis de logs de servidor usando R (parte II)
 
@@ -133,7 +195,6 @@ Queremos programar un script con el que podamos hacer una investigación forense
 Nuestro programa ha de ser capaz de obtener las respuestas de forma dinámica a las siguientes preguntas utilizando instrucciones de código en R:
 
 1. Descomprimir el fichero comprimido que contiene los registros del servidor, y a partir de los datos extraídos, cargar en data frame los registros con las peticiones servidas.
-
 Damos por hecho que el fichero comprimido está guardado en C:\temp con nombre epa_http.zip y descomprimirá el contenido en la misma carpeta c:\temp, teniendo el fichero epa-http.csv en la misma ruta.
 
 ```{r}
