--- a/Practica2.Rmd
+++ b/Practica2.Rmd
@@ -233,7 +233,7 @@ Descripción campo Bytes: Número de bytes transferidos
 3. Aprovechando que los datos a analizar son los mismos de la primera práctica, para esta entrega es imprescindible que los datos estén en formato de “datos elegantes”.
 
 ```{r}
-epa_http$Timestamp <- as.POSIXct(epa_http$Timestamp, format=[%d:%H:%M:%S], tz="UTC")
+epa_http$Timestamp <- as.POSIXct(epa_http$Timestamp, format="[%d:%H:%M:%S]", tz="UTC")
 epa_http
 ```
 
