Cambio el color de las barras en los gráficos del ejercicio 5 de la segunda parte

--- a/Practica2.Rmd
+++ b/Practica2.Rmd
@@ -279,7 +279,7 @@ epa_http %>%
 
 # Creamos un gráfico de barras del número de peticiones por método HTTP
 ggplot(epa_http, aes(x = Tipo)) +
-  geom_bar() +
+  geom_bar(fill="orange") +
   labs(title = "Número de peticiones por método HTTP", x = "Método", y = "Peticiones")
 
 
@@ -296,7 +296,7 @@ epa_http_imagenes %>%
 
 # Creamos un gráfico de barras del número de peticiones por método HTTP filtradas por peticiones de imágenes
 ggplot(epa_http_imagenes, aes(x = Tipo)) +
-  geom_bar() +
+  geom_bar(fill="lightblue") +
   labs(title = "Número de peticiones por método HTTP", x = "Método", y = "Peticiones")
 ```
 
